# grpc-client

./: .gitignore  .gitmodules  README.md
cpp/: BUILDING.md  CMakeLists.txt  README.md
cpp/src/: main.cpp
cpp/src/grpc/: adaptee.cpp  adaptee.h  adapter.cpp  adapter.h  worker.cpp  worker.h
cpp/src/service/: observer.cpp  observer.h  provider.cpp  provider.h
cpp/src/until/: timer.cpp  timer.h
node/: README.md  compile-proto.sh  main.ts  package.json  tsconfig.json
node/grpc/: grpcAdapter.ts  grpcObserver.ts  grpcProvider.ts  grpcWorker.ts
node/src/: index.ts
node/src/grpc/: adapter.ts  grpcObserver.ts  grpcProvider.ts  grpcWorker.ts  worker.ts
node/src/lib/grpc/: adaptee.ts  adapter.ts
node/src/service/: observer.ts  provider.ts
